--- a/src/projects/Project.module.css
+++ b/src/projects/Project.module.css
@@ -1,10 +1,29 @@
-.projectBlock{
-    height: 100vh;
+.projectBlock {
+    min-height: 75vh;
     background-color: lightcyan;
+    flex-wrap: wrap;
 }
 
 .projectContainer {
     align-items: center;
     flex-direction: column;
     justify-content: flex-start;
+}
+
+.title {
+    background-color: cadetblue;
+}
+
+.projects {
+    border: 1px solid red;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+@media screen and (max-width: 749px) {
+    .projects{
+        justify-content: center;
+    }
 }
