--- a/src/projects/project/Project.module.css
+++ b/src/projects/project/Project.module.css
@@ -4,20 +4,59 @@
     align-items: center;
     text-align: center;
     width: 300px;
-    background-color: blueviolet;
+    margin-top: 30px;
+    background-color: #252527;
+
+}
+
+.projectInfo {
+    padding: 25px 20px;
+}
+
+.projectTitle {
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 20px;
+    letter-spacing: 1px;
+    margin: 0 0 5px;
+    line-height: 1.2;
+    color: #ffffff;
+}
+
+.description {
+    font-family: "Poppins", sans-serif;
+    line-height: 1.8;
+    font-weight: 350;
+    font-size: 14px;
+    color: white;
 }
 
 .anchor {
-    border: 1px solid black;
     width: 70px;
     height: 25px;
-    margin-top: 50px;
+    margin-top: 170px;
+    color: midnightblue;
+    background-color: lightgray;
+    border-radius: 5px;
+    border: 1px solid midnightblue;
+
+}
+
+.anchor a {
+    text-decoration: none;
+    font-family: "Poppins", sans-serif;
+    line-height: 1.8;
+    font-weight: 400;
+    font-size: 14px;
+    color: midnightblue;
+
 }
 
 .photo {
     width: 300px;
     height: 200px;
-    background-color: aquamarine;
     display: flex;
     justify-content: center;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
