--- a/src/common/components/titile/Title.module.scss
+++ b/src/common/components/titile/Title.module.scss
@@ -1,26 +1,28 @@
+@import "src/common/styles/variables/variables";
+
 .title {
     margin-bottom: 30px;
     position: relative;
 }
 
 .title::before {
-    content: "";
-    background: #4e93e6;
-    width: 55px;
-    height: 1px;
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    transform: translate(-50%, 50%);
+  content: "";
+  background: $primaryColor;
+  width: 55px;
+  height: 1px;
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translate(-50%, 50%);
 }
 
 .title h2 {
     font-family: 'Josefin Sans', sans-serif;
     margin: 0;
     font-weight: 300;
-    font-size: 36px;
+    font-size: 35px;
     letter-spacing: 5px;
     line-height: 1.2;
-    color: #fff;
+    color: $textColor;
     text-transform: capitalize;
 }
