--- a/src/footer/description/Description.module.scss
+++ b/src/footer/description/Description.module.scss
@@ -5,6 +5,8 @@
     align-items: center;
 }
 
-.title {
-    background-color: cadetblue;
+.description span {
+    color: white;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 18px;
 }
