--- a/src/projects/Projects.module.scss
+++ b/src/projects/Projects.module.scss
@@ -1,6 +1,8 @@
+@import "src/common/styles/variables/variables";
+
 .projectBlock {
   min-height: 75vh;
-  background-color: #1f1f20;
+  background-color: $backGroundColor;
   flex-wrap: wrap;
 
   .projectContainer {
@@ -14,6 +16,7 @@
       justify-content: space-between;
       flex-wrap: wrap;
       align-items: flex-start;
+      padding-bottom: 20px;
       @media screen and (max-width: 749px) {
         justify-content: center;
       }
